Updated layout according to new design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,15 @@
 <div class="row">
-    <div class="large-8 small-8 columns">
-        <ul class="horizontal-list">
+    <div class="columns">
+        <h5 class="font-light">Anagh Sharma</h5>
+    </div>
+</div>
+<div class="row" style="margin-top: 2.5rem; margin-bottom: 2.5rem;">
+    <div class="large-6 medium-6 columns" style="margin-top: 0.4rem;">
+        <a href="mailto:anaghsharma12.com" class="font-medium font-primary-color link-button">WRITE TO ME</a>
+    </div>
+    <div class="large-6 medium-6 columns">
+        <ul class="vertical-menu no-bullet">
+            <li class="font-secondary" style="padding-bottom: 1rem;">Connect</li>
             <li>
                 <a href="{{ site.behance }}" target="_blank">Behance</a>
             </li>
@@ -15,7 +24,12 @@
             </li>
         </ul>
     </div>
-    <div class="large-4 small-4 columns">
-        <p>Made with &hearts; in India</p>
+</div>
+<div class="row">
+    <div class="large-6 columns">
+        <p class="quiet font-secondary">© 2017, Made with ♥ in India</p>
+    </div>
+    <div class="large-6 columns">
+        <p class="quiet font-secondary">Built proudly using Jekyll and Github Pages</p>
     </div>
 </div>
