Updated footer menu

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
         <a href="mailto:anaghsharma12.com" class="font-medium font-primary-color link-button">WRITE TO ME</a>
     </div>
     <div class="large-6 medium-6 columns">
-        <ul class="vertical-menu no-bullet">
-            <li class="font-secondary" style="padding-bottom: 1rem;">Connect</li>
+        <ul class="vertical-menu no-bullet footer-menu">
+            <li class="font-secondary menu-heading" style="padding-bottom: 1rem;">Connect</li>
             <li>
                 <a href="{{ site.behance }}" target="_blank">Behance</a>
             </li>
