--- a/css/app.css
+++ b/css/app.css
@@ -4493,3 +4493,11 @@ ul {
   margin-top: 8rem;
   padding-top: 3.5rem;
   padding-bottom: 3rem; }
+
+.footer-menu li {
+  padding-top: 4px;
+  padding-bottom: 4px; }
+
+@media screen and (max-width: 39.9375em) {
+  .menu-heading {
+    margin-top: 3rem; } }
