--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row" style="margin-top: 2.5rem; margin-bottom: 2.5rem;">
     <div class="large-6 medium-6 columns" style="margin-top: 0.4rem;">
-        <a href="mailto:anaghsharma12.com" class="font-medium font-primary-color link-button">WRITE TO ME</a>
+        <a href="mailto:anaghsharma12.com" class="button-link font-medium text-primary-color">WRITE TO ME</a>
     </div>
     <div class="large-6 medium-6 columns">
         <ul class="vertical-menu no-bullet footer-menu">
