--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -23,7 +23,7 @@ h1, h2, h3, h4, h5, h6 {
   color: $white;
 }
 
-.font-primary-color {
+.text-primary-color {
   color: $primary-color;
 }
 
@@ -98,7 +98,6 @@ ul {
 .hero-text {
   padding-top: 8rem;
   p {
-    font-size: 1em;
     padding-bottom: 2.5rem;
   }
   a {
@@ -109,16 +108,6 @@ ul {
     border-bottom: 3px solid $primary-color;
     padding-bottom: 6px;
   }
-}
-
-.link-button {
-  font-size: 0.9rem;
-}
-
-.link-button:hover {
-  text-decoration: none;
-  border-bottom: 3px solid $primary-color;
-  padding-bottom: 6px;
 }
 
 .footer {
@@ -140,6 +129,13 @@ ul {
     margin-top: 3rem;
   }
 }
+
+.button-link {
+  font-size: 0.9em;
+}
+
+
+
 
 // .horizontal-list li {
 //   display: inline-block;
