Code refactoring for primary hyperlink button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,22 +5,22 @@
 </div>
 <div class="row" style="margin-top: 2.5rem; margin-bottom: 2.5rem;">
     <div class="large-6 medium-6 columns" style="margin-top: 0.4rem;">
-        <a href="mailto:anaghsharma12.com" class="button-link font-medium text-primary-color">WRITE TO ME</a>
+        <a href="mailto:anaghsharma12.com" class="primary quiet font-medium text-primary-color">WRITE TO ME</a>
     </div>
     <div class="large-6 medium-6 columns">
         <ul class="vertical-menu no-bullet footer-menu">
             <li class="font-secondary menu-heading" style="padding-bottom: 1rem;">Connect</li>
             <li>
-                <a href="{{ site.behance }}" target="_blank">Behance</a>
+                <a href="{{ site.behance }}" target="_blank" class="primary">Behance</a>
             </li>
             <li>
-                <a href="{{ site.dribbble }}" target="_blank">Dribbble</a>
+                <a href="{{ site.dribbble }}" target="_blank" class="primary">Dribbble</a>
             </li>
             <li>
-                <a href="{{ site.github }}" target="_blank">GitHub</a>
+                <a href="{{ site.github }}" target="_blank" class="primary">GitHub</a>
             </li>
             <li>
-                <a href="{{ site.twitter }}" target="_blank">Twitter</a>
+                <a href="{{ site.twitter }}" target="_blank" class="primary">Twitter</a>
             </li>
         </ul>
     </div>
