Added spacing and typography classes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,35 +1,37 @@
-<div class="row">
-    <div class="columns">
-        <h5 class="font-light">Anagh Sharma</h5>
+<div class="row mt5 mb4">
+    <div class="row">
+        <div class="columns">
+            <h5 class="font-light">Anagh Sharma</h5>
+        </div>
     </div>
-</div>
-<div class="row" style="margin-top: 2.5rem; margin-bottom: 2.5rem;">
-    <div class="large-6 medium-6 columns" style="margin-top: 0.4rem;">
-        <a href="mailto:anaghsharma12.com" class="primary quiet font-medium text-primary-color">WRITE TO ME</a>
+    <div class="row mt4">
+        <div class="large-6 medium-6 columns">
+            <a href="mailto:anaghsharma12.com" class="primary quiet font-medium font-primary-color">WRITE TO ME</a>
+        </div>
+        <div class="large-6 medium-6 columns">
+            <ul class="vertical-menu no-bullet">
+                <li class="font-secondary menu-heading pb3">Connect</li>
+                <li class="pv1">
+                    <a href="{{ site.behance }}" target="_blank" class="primary">Behance</a>
+                </li>
+                <li class="pv1">
+                    <a href="{{ site.dribbble }}" target="_blank" class="primary">Dribbble</a>
+                </li>
+                <li class="pv1">
+                    <a href="{{ site.github }}" target="_blank" class="primary">GitHub</a>
+                </li>
+                <li class="pv1">
+                    <a href="{{ site.twitter }}" target="_blank" class="primary">Twitter</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="large-6 medium-6 columns">
-        <ul class="vertical-menu no-bullet footer-menu">
-            <li class="font-secondary menu-heading" style="padding-bottom: 1rem;">Connect</li>
-            <li>
-                <a href="{{ site.behance }}" target="_blank" class="primary">Behance</a>
-            </li>
-            <li>
-                <a href="{{ site.dribbble }}" target="_blank" class="primary">Dribbble</a>
-            </li>
-            <li>
-                <a href="{{ site.github }}" target="_blank" class="primary">GitHub</a>
-            </li>
-            <li>
-                <a href="{{ site.twitter }}" target="_blank" class="primary">Twitter</a>
-            </li>
-        </ul>
-    </div>
-</div>
-<div class="row">
-    <div class="large-6 columns">
-        <p class="quiet font-secondary">© 2017, Made with ♥ in India</p>
-    </div>
-    <div class="large-6 columns">
-        <p class="quiet font-secondary">Built proudly using Jekyll and Github Pages</p>
+    <div class="row mt3">
+        <div class="large-6 columns">
+            <p class="quiet font-secondary">© 2017, Made with ♥ in India</p>
+        </div>
+        <div class="large-6 columns">
+            <p class="quiet font-secondary">Built proudly using Jekyll and Github Pages</p>
+        </div>
     </div>
 </div>
