--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,3 +1,13 @@
+.row {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+
+  @include breakpoint(small){
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
+}
+
 ul {
   margin-left: 0;
   margin-right: 0;
