--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,18 @@
-<div class="row nav-bar">
+<div class="row nav-bar mt6">
     <div class="large-1 medium-1 small-2 columns">
-        <img id="logo" src="/assets/logo_light.svg"/>     
+        <img class="logo mt2" src="/assets/logo_light.svg"/>     
     </div>
     <div class="large-5 medium-2 small-8 columns">
         <hr class="nav-rule">
     </div>
     <div class="large-6 medium-9 small-2 columns">
-        <ul class="menu expanded align-right">
-            <li><a href="{{ site.url }}/about" class="font-medium">About</a></li>
-            <li><a href="{{ site.url }}/about" class="font-medium">Garage</a></li>
-            <li><a href="{{ site.url }}/about" class="font-medium">Design Room</a></li>
-            <li><a href="{{ site.url }}/about" class="font-medium">Store</a></li>
-            <li><a href="{{ site.url }}/about" class="font-medium">Blog</a></li>
-            <li><a href="{{ site.url }}/about" class="font-medium">Projects</a></li>
+        <ul class="no-bullet align-right float-right pv2">
+            <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Projects</a></li>
+            <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Blog</a></li>
+            <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Store</a></li>
+            <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Design Room</a></li>
+            <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Garage</a></li>
+            <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">About</a></li>
         </ul>
     </div>
 </div>
