Update hero title and text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
         <hr class="nav-rule">
     </div>
     <div class="large-6 medium-9 small-2 columns">
-        <ul class="no-bullet align-right float-right pv2">
+        <ul class="no-bullet align-right float-right pv2 mb0">
             <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Projects</a></li>
             <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Blog</a></li>
             <li class="ph3"><a href="{{ site.url }}/about" class="font-medium primary">Store</a></li>
