--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -70,6 +70,29 @@
   margin-right: 1%;
 }
 
+.left-collapse {
+  padding-left: 0;
+
+  @include breakpoint (small only) {
+    padding-right: 0;
+  }
+}
+
+.right-collapse {
+  padding-right: 0;
+
+  @include breakpoint (small only) {
+    padding-left: 0;
+  }
+}
+
+.small-collapse {
+  @include breakpoint(small only){
+    padding-left: 0.3125rem;
+    padding-right: 0.3125rem;
+  }
+}
+
 .square {
   width: 100%;
   padding-bottom: 100%;
@@ -78,15 +101,29 @@
 .horizontal-rect-8 {
   width: 100%;
   padding-bottom: 50%;
+
+  @include breakpoint (small only){
+    padding-bottom: 60%;
+  }
 }
 
 .horizontal-rect-12 {
   width: 100%;
   padding-bottom: 35%;
+  
+  @include breakpoint (small only){
+    padding-bottom: 50%;
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 .vertical-rect {
   padding-bottom: calc(200% + 0.75rem);
+
+  @include breakpoint (small only){
+    padding-bottom: calc(150% + 0.75rem);
+  }
 }
 
 .portfolio-project-card {
@@ -95,6 +132,10 @@
   background: #FFFFFF;
   border-radius: 2px;
   box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+
+  @include breakpoint (small only){
+    top: -6rem;
+  }
 }
 
 .portfolio-project-card:hover {
