Fixed featured sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
   <body>
     {% include header.html %}
     {{ content }}
-     <div class="row expanded footer">
+     <div class="row expanded footer mt3">
       {% include footer.html %}
     </div> 
 
