--- a/css/app.css
+++ b/css/app.css
@@ -5583,33 +5583,29 @@ table.hover tbody tr:nth-of-type(even):hover {
   background-size: cover;
   background-repeat: no-repeat;
   margin-right: 0.25rem; }
+  @media screen and (max-width: 39.9375em) {
+    .sidebar {
+      margin-top: 4rem;
+      margin-right: 0; } }
 
-.featured-list {
-  padding: 0;
-  margin-bottom: 0;
-  margin-top: 12px; }
-  .featured-list li {
-    list-style: none; }
-  .featured-list h6 {
-    opacity: 0.7;
-    margin-bottom: 0; }
-  .featured-list a {
-    display: inline-block;
-    color: #ffffff;
-    margin-top: 8px;
-    margin-bottom: 24px;
-    font-size: 0.9em;
-    line-height: 1.4; }
-  .featured-list .disabled {
-    pointer-events: none;
-    cursor: default; }
+.featured-list a {
+  display: inline-block;
+  color: #ffffff;
+  margin-top: 8px;
+  margin-bottom: 24px;
+  font-size: 0.9em;
+  line-height: 1.4; }
+
+.featured-list .disabled {
+  pointer-events: none;
+  cursor: default; }
 
 .action-button {
   box-sizing: border-box;
   text-decoration: none;
   background: #000000;
   padding: 18px 24px;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   text-align: center;
   -webkit-user-select: none;
   -moz-user-select: none;
