--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -4,6 +4,9 @@ a.primary:hover {
   padding-bottom: 6px;
 }
 
+a.heading:hover {
+  text-decoration: none;
+}
 // .button-link {
 //   font-size: 0.9rem;
 // }
