--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -202,7 +202,14 @@
   box-shadow: 0 0 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
 }
 
-
+.section-heading-bar-dark {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -1.2rem;
+  background: rgba(255,255,255,0.12);
+  height: 12px;
+}
 
 // .horizontal-list li {
 //   display: inline-block;
