--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -109,6 +109,9 @@
 .font-medium {
   font-weight: 500;
 }
+.font-secondary-bold {
+  font-weight: 700;
+}
 .font-bold {
   font-weight: 800;
 }
@@ -130,7 +133,7 @@
 }
 
 .font-secondary {
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 /*
