--- a/css/app.css
+++ b/css/app.css
@@ -5629,6 +5629,14 @@ table.hover tbody tr:nth-of-type(even):hover {
   background: rgba(255, 255, 255, 0.12);
   height: 12px; }
 
+.blog-card {
+  background: #e62027;
+  width: 100%;
+  height: 10rem;
+  border-radius: 2px; }
+  .blog-card h5 {
+    font-family: "Playfair Display", serif; }
+
 a.primary:hover {
   text-decoration: none;
   border-bottom: 3px solid #e62027;
@@ -5636,6 +5644,10 @@ a.primary:hover {
 
 a.heading:hover {
   text-decoration: none; }
+
+a.no-decoration-light:hover {
+  text-decoration: none;
+  color: #ffffff; }
 
 /*
 
@@ -5776,6 +5788,9 @@ a.heading:hover {
 .font-medium {
   font-weight: 500; }
 
+.font-secondary-bold {
+  font-weight: 700; }
+
 .font-bold {
   font-weight: 800; }
 
@@ -5792,7 +5807,7 @@ a.heading:hover {
   font-size: 90%; }
 
 .font-secondary {
-  opacity: 0.5; }
+  opacity: 0.6; }
 
 /*
 
