--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -211,6 +211,16 @@
   height: 12px;
 }
 
+.blog-card {
+  background: $primary-color;
+  width: 100%;
+  height: 10rem;
+  border-radius: 2px;
+  h5 {
+    font-family: $font-family-serif;
+  }
+}
+
 // .horizontal-list li {
 //   display: inline-block;
 //   list-style-type: none;
