--- a/css/app.css
+++ b/css/app.css
@@ -5600,27 +5600,6 @@ table.hover tbody tr:nth-of-type(even):hover {
   pointer-events: none;
   cursor: default; }
 
-.action-button {
-  box-sizing: border-box;
-  text-decoration: none;
-  background: #000000;
-  padding: 18px 24px;
-  font-size: 0.8rem;
-  text-align: center;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
-
-.action-button:hover {
-  color: #ffffff;
-  text-decoration: none;
-  z-index: 2;
-  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24); }
-
-.action-button:active {
-  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24); }
-
 .section-heading-bar-dark {
   display: block;
   margin-left: auto;
@@ -5648,6 +5627,31 @@ a.heading:hover {
 a.no-decoration-light:hover {
   text-decoration: none;
   color: #ffffff; }
+
+a.disabled {
+  pointer-events: none;
+  cursor: default; }
+
+.action-button {
+  box-sizing: border-box;
+  text-decoration: none;
+  background: #000000;
+  padding: 18px 24px;
+  font-size: 0.8rem;
+  text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.action-button:hover {
+  color: #ffffff;
+  text-decoration: none;
+  z-index: 2;
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24); }
+
+.action-button:active {
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24); }
 
 /*
 
