--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -13,6 +13,35 @@ a.no-decoration-light:hover {
   color: $white;
 }
 
+a.disabled {
+  pointer-events: none;
+  cursor: default;
+}
+
+.action-button {
+  box-sizing: border-box;
+  text-decoration: none;
+  background: $black;
+  padding: 18px 24px;
+  font-size: 0.8rem;
+  text-align: center;
+  -webkit-user-select: none;  
+  -moz-user-select: none;    
+  -ms-user-select: none;      
+  user-select: none;
+}
+
+.action-button:hover {
+  color: $white;
+  text-decoration: none;
+  z-index: 2;
+  box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+}
+
+.action-button:active {
+  box-shadow: 0 0 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
+}
+
 // .button-link {
 //   font-size: 0.9rem;
 // }
