Added the design room section

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -198,330 +198,19 @@
   }
 }
 
-// .horizontal-list li {
-//   display: inline-block;
-//   list-style-type: none;
-//   margin-right: 0%;
-// }
+.room-background {
+  background: #191919;
+  margin-left: 1%;
+  margin-right: 1%;
+}
 
-// .navbar-list {
-//   margin-right: 2%;
-//   li {
-//   margin-right: 1%;
-//   float: right;
-//   background: $white;
-//   padding: 5px 24px;
-//   font-weight: 500;
-//     :hover {
-//       text-decoration: none;
-//       border-bottom: 3px solid $black;
-//       padding-bottom: 6px;
-//     }
-//   }
-// }
+.room-text {
+  height: 22.2rem;
 
-// .divider hr {
-//   max-width: 100%;
-//   opacity: 0.3;
-//   background: $black;
-// }
-
-// .overlay-up {
-//   position: relative;
-//   margin-top: -18px;
-// }
-
-// .hero-action {
-//   margin-top: 4rem;
-//   background: $black;
-//   border-radius: 2px;
-// }
-
-// .action-list {
-//   li {
-//     padding-top: 2.4rem;
-//     padding-bottom: 2.4rem;
-//     padding-left: 1.2rem;
-//     padding-right: 1.4rem;
-//   }
-//   img {
-//     margin-right: 6px;
-//     margin-top: -3px;
-//     height: 20px;
-//   }
-//   a {
-//   color: $white;
-//   font-size: 1.1em;
-//   }
-//   a:hover {
-//     text-decoration: none;
-//     border-bottom: 3px solid $white;
-//     padding-bottom: 6px;
-//   }
-// }
-
-// .footer {
-//   margin-top: 6rem;
-//   width: 100%;
-//   background: $black;
-//   p {
-//     float: right;
-//     color: $white;
-//     opacity: 0.5;
-//     margin-top: 1.3rem;
-//     font-size: 0.9em;
-//   }
-//   ul {
-//     margin-top: 1rem;
-//     margin-left: -1.2rem;
-//     margin-bottom: 1rem;
-//   }
-//   li {
-//     margin: 5px 24px;
-//       :hover {
-//         text-decoration: none;
-//         border-bottom: 3px solid $white;
-//         padding-bottom: 6px;
-//       }
-//     }
-//   a {
-//     color: $white;
-//     font-size: 0.9em;
-//   }
-// }
-
-// .section-heading-bar-light {
-//   display: block;
-//   margin-left: auto;
-//   margin-right: auto;
-//   margin-top: -1.2rem;
-//   background: #e8e8e8;
-//   height: 12px;
-// }
-
-// .section-heading-bar-dark {
-//   display: block;
-//   margin-left: auto;
-//   margin-right: auto;
-//   margin-top: -1.2rem;
-//   background: rgba(0,0,0,0.38);
-//   height: 12px;
-// }
-
-// .section-portfolio-background {
-//   background: rgba(238, 238, 238, 1);
-//   margin-top: 20rem;
-//   margin-left: 1%;
-//   margin-right: 1%;
-// }
-
-// .left-collapse {
-//   padding-left: 0;
-// }
-
-// .right-collapse {
-//   padding-right: 0;
-// }
-
-// .square {
-//   width: 100%;
-//   padding-bottom: 100%;
-// }
-
-// .horizontal-rect-8 {
-//   width: 100%;
-//   padding-bottom: 50%;
-// }
-
-// .horizontal-rect-12 {
-//   width: 100%;
-//   padding-bottom: 35%;
-// }
-
-// .vertical-rect {
-//   padding-bottom: calc(200% + 0.75rem);
-// }
-
-// .portfolio-project-card {
-//   margin-bottom: 8px;
-//   position: relative;
-//   top: -12rem;
-//   background: #FFFFFF;
-//   border-radius: 2px;
-//   box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
-// }
-
-// .portfolio-project-card:hover {
-//   cursor: pointer;
-//   z-index: 2;
-//   box-shadow: 0 0 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
-//   transition: box-shadow 0.2s ease;
-// }
-
-// .medium-heading {
-//   font-size: 0.8em;
-//   color: rgba(0,0,0,0.54);
-// }
-
-// .sidebar-featured {
-//   background: #333333;
-//   background-image: url("/assets/images/ovals-background.png");
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   padding-top: 32px;
-//   padding-bottom: 0px;
-//   padding-left: 20px;
-//   padding-right: 20px;
-// }
-
-// .featured-list {
-//   padding: 0;
-//   margin-bottom: 0;
-//   margin-top: 12px;
-//   li {
-//     list-style: none;
-//   }
-//   h6 {
-//     opacity: 0.7;
-//     margin-bottom: 0;
-//   }
-//   a {
-//     display: inline-block;
-//     color: $white;
-//     margin-top: 8px;
-//     margin-bottom: 24px;
-//     font-size: 0.9em;
-//     line-height: 1.4;
-//   }
-//   .disabled {
-//     pointer-events: none;
-//     cursor: default;
-//   }
-// }
-
-// .action-button {
-//   box-sizing: border-box;
-//   text-decoration: none;
-//   background: $black;
-//   padding: 18px 24px;
-//   color: $white;
-//   font-size: 0.8em;
-//   text-align: center;
-//   -webkit-user-select: none;  
-//   -moz-user-select: none;    
-//   -ms-user-select: none;      
-//   user-select: none;
-// }
-
-// .action-button:hover {
-//   color: $white;
-//   text-decoration: none;
-//   z-index: 2;
-//   box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
-// }
-
-// .action-button:active {
-//   box-shadow: 0 0 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
-// }
-
-// .action-button-light {
-//   box-sizing: border-box;
-//   text-decoration: none;
-//   background: $white;
-//   padding: 18px 24px;
-//   color: $black;
-//   font-size: 0.8em;
-//   text-align: center;
-//   -webkit-user-select: none;  
-//   -moz-user-select: none;    
-//   -ms-user-select: none;      
-//   user-select: none;
-// }
-
-// .action-button-light:hover {
-//   color: $black;
-//   text-decoration: none;
-//   z-index: 2;
-//   box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
-// }
-
-// .action-button-light:active {
-//   box-shadow: 0 0 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
-// }
-
-// .no-hyperlink a:hover {
-//   text-decoration: none;
-// }
-
-// .blog-home-container {
-//   position: relative;
-//   height: 24rem;
-//   width:100%;
-//   margin-top:20px;
-//   background: #ededed;
-// }
-
-// .blog-home-image {
-//   width: 100%;
-//   max-height: 100%;
-//   object-fit: cover;
-// }
-
-// .overlay {
-//   position: absolute;
-//   top: 0;
-//   right: 0;
-//   bottom: 0;
-//   left: 0;
-//   background: $black;
-//   opacity: 0.5;
-// }
-
-// .sidebar-articles {
-//   padding-top: 0px;
-//   padding-left: 0px;
-//   margin-bottom: 0;
-//   margin-top: 12px;
-//   li {
-//     list-style: none;
-//   }
-//   h6 {
-//     opacity: 0.7;
-//     margin-bottom: 24px;
-//   }
-//   a {
-//     display: inline-block;
-//     margin-top: 8px;
-//     margin-bottom: 16px;
-//     font-size: 0.9em;
-//     line-height: 1.4;
-//   }
-
-// }
-
-// .section-room-background {
-//   background: #333333;
-//   margin-top: 10rem;
-//   margin-left: 1%;
-//   margin-right: 1%;
-//   padding-top: 8rem;
-//   padding-bottom: 8rem;
-// }
-
-// @media only screen and (max-width: 460px) {
-  
-//   .horizontal-bar {
-//     display: inline-block;
-//     vertical-align: top;
-//     margin-top: 1.5rem;
-//     background: rgba(0,0,0,0.38);
-//     width: 40px;
-//     height: 5px;
-//   }
-
-//   .hero-title {
-//   font-size: 2.3em;
-//   display: inline-block;
-//   margin-left: -1rem;
-//   }
-// }
+  @include breakpoint (small only){
+    height: 16rem;
+  }
+  @include breakpoint (medium only){
+    height: 12.4rem;
+  }
+}
