--- a/css/app.css
+++ b/css/app.css
@@ -5617,6 +5617,20 @@ table.hover tbody tr:nth-of-type(even):hover {
     font-family: "Playfair Display", serif;
     height: 5rem; }
 
+.room-background {
+  background: #191919;
+  margin-left: 1%;
+  margin-right: 1%; }
+
+.room-text {
+  height: 22.2rem; }
+  @media screen and (max-width: 39.9375em) {
+    .room-text {
+      height: 16rem; } }
+  @media screen and (min-width: 40em) and (max-width: 67.4375em) {
+    .room-text {
+      height: 12.4rem; } }
+
 a.primary:hover {
   text-decoration: none;
   border-bottom: 3px solid #e62027;
