Updated the garage section with image and info

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -214,3 +214,18 @@
     height: 12.4rem;
   }
 }
+
+.garage-spacing {
+  padding-left: 8rem;
+  padding-right: 8rem;
+
+  @include breakpoint (medium only) {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  @include breakpoint (small only) {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
