--- a/css/app.css
+++ b/css/app.css
@@ -5638,6 +5638,12 @@ table.hover tbody tr:nth-of-type(even):hover {
   background: #191919;
   border-radius: 2px; }
 
+@media screen and (max-width: 39.9375em) {
+  .display-pic {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin-bottom: 4rem; } }
+
 a.primary:hover {
   text-decoration: none;
   border-bottom: 3px solid #e62027;
