--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -240,3 +240,11 @@
   -o-background-size: cover;
   background-size: cover;
 }
+
+.uber-thumbnail {
+  background: url("/assets/images/projects-thumbnails/uber.jpg") no-repeat center center; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
