Added navigation at logo click

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <div class="row nav-bar mt6">
     <div class="large-1 medium-1 small-2 columns">
-        <img class="logo mt2" src="/assets/logo_light.svg"/>     
+        <a href="{{ site.url }}" class="heading">
+            <img class="logo mt2" src="/assets/logo_light.svg"/>     
+        </a>
     </div>
     <div class="large-5 medium-2 small-8 columns">
         <hr class="nav-rule">
