--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -233,6 +233,14 @@
   background-size: cover;
 }
 
+.identity-hero {
+  background: url("/assets/images/projects-heroes/identity-hero.jpg") no-repeat center center; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .uber-thumbnail {
   background: url("/assets/images/projects-thumbnails/uber.jpg") no-repeat center center; 
   -webkit-background-size: cover;
