--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -136,6 +136,10 @@
   opacity: 0.6;
 }
 
+.font-content {
+  font-family: $font-family-serif;
+}
+
 /*
 
    LINE HEIGHT / LEADING
@@ -144,7 +148,7 @@
 
   .lh-solid { line-height: 1; }
   .lh-title { line-height: 1.25; }
-  .lh-copy  { line-height: 1.5; }
+  .lh-copy  { line-height: 2; }
 
 @media (--breakpoint-not-small) {
   .lh-solid-ns { line-height: 1; }
