--- a/css/app.css
+++ b/css/app.css
@@ -5662,6 +5662,14 @@ table.hover tbody tr:nth-of-type(even):hover {
     background: url("/assets/images/projects-thumbnails/xbox-hover.jpg") no-repeat center center;
     background-size: cover; }
 
+.monocle-thumbnail {
+  background: url("/assets/images/projects-thumbnails/monocle.jpg") no-repeat center center;
+  background-size: cover;
+  transition: 0.1s; }
+  .monocle-thumbnail:hover {
+    background: url("/assets/images/projects-thumbnails/monocle-hover.jpg") no-repeat center center;
+    background-size: cover; }
+
 .uber-thumbnail {
   background: url("/assets/images/projects-thumbnails/uber.jpg") no-repeat center center;
   background-size: cover; }
