--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -283,6 +283,27 @@
   }
 }
 
+.monocle-thumbnail {
+  background: url("/assets/images/projects-thumbnails/monocle.jpg") no-repeat center center; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  -o-transition: 0.1s;
+  -ms-transition: 0.1s;
+  -moz-transition: 0.1s;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+
+  &:hover {
+    background: url("/assets/images/projects-thumbnails/monocle-hover.jpg") no-repeat center center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+}
+
 .uber-thumbnail {
   background: url("/assets/images/projects-thumbnails/uber.jpg") no-repeat center center; 
   -webkit-background-size: cover;
